--- a/cmd/server/contracts/api-specs.yaml
+++ b/cmd/server/contracts/api-specs.yaml
@@ -5,7 +5,7 @@ info:
   description: A sample API that uses a User as an example to demonstrate features in the OpenAPI 3.0 specification
   termsOfService: https://swagger.io/terms/
   contact:
-    name: Firstwordai API Team
+    name: Go App API Team
     email: apiteam@swagger.io
     url: https://swagger.io
   license:
