--- a/cmd/server/contracts/api-bundled.yaml
+++ b/cmd/server/contracts/api-bundled.yaml
@@ -5,7 +5,7 @@ info:
   description: A sample API that uses a User as an example to demonstrate features in the OpenAPI 3.0 specification
   termsOfService: 'https://swagger.io/terms/'
   contact:
-    name: Firstwordai API Team
+    name: Go App API Team
     email: apiteam@swagger.io
     url: 'https://swagger.io'
   license:
@@ -59,6 +59,31 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+  '/openai/{topic}':
+    get:
+      summary: Returns a Paragraph
+      description: Returns a Paragraph based on a topic
+      operationId: getParagraphByTopic
+      parameters:
+        - name: topic
+          in: path
+          description: topic to search
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: open ai response
+          content:
+            application/json:
+              schema:
+                type: string
         default:
           description: unexpected error
           content:
